// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-tag-tag soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="soui-tag-tag soui-tag-info soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Info
      </span>
    </div>
  </div>
  <div
    class="soui-tag-tag soui-tag-danger soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Danger
      </span>
    </div>
  </div>
  <div
    class="soui-tag-tag soui-tag-warning soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Warning
      </span>
    </div>
  </div>
  <div
    class="soui-tag-tag soui-tag-success soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-tangerine soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-magenta soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-purple soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-indigo soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-cyan soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-neon soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-lemon soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-brown soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-tangerine soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-magenta soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-purple soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-indigo soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-cyan soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-neon soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-lemon soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-brown soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-tangerine soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-magenta soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-purple soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-indigo soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-cyan soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-neon soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-lemon soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-brown soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-tangerine soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-magenta soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-purple soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-indigo soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-cyan soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-neon soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-lemon soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-brown soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-info soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-danger soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-warning soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-success soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-default soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-info soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-danger soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-warning soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-success soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-default soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-info soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-danger soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-warning soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-success soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="soui-tag-tag soui-tag-default soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-info soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-danger soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-warning soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-success soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-small soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Small
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-large soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Large
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="soui-tag-tag soui-tag-small soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Small
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-large soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Large
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tag 1
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tag 2
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-default soui-tag-bright soui-tag-disabled"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tag 3
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag-tag soui-tag-default soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <div
        class="soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="soui-tag-tag soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Abc
      </span>
    </div>
    <div
      class="soui-tag-close-icon"
    >
      <span
        class="soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="soui-tag-tag soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="soui-tag-tag soui-tag-rounded soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Rounded
      </span>
    </div>
  </div>
</div>
`;
